src/objects/Transactions__c.object
<CustomObject>
    <description>XLR8 custom object designed to hold various transactions that occur at the Financial Account Level.  For example, RMD Withdrawals, IRA Contributions, General Withdrawals, Client Fees, etc.</description>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>XLR8_Assets_Liabilities__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RMD_Member_Name__c</fullName>
        <formula>RMD_Requirement__r.Financial_Account__r.RMD_Member__r.FirstName + &apos; &apos; +  RMD_Requirement__r.Financial_Account__r.RMD_Member__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RMD Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMD_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMD Requirement</label>
        <referenceTo>RMD_Requirement__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <inlineHelpText>This is the type of transaction being imported. For example, RMD Withdrawal, Client Management Fee, IRA Contributions or Distributions, etc.</inlineHelpText>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>RMD Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IRA Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roth Contribution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Amount__c</columns>
        <columns>Transaction_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRX-{00000}</displayFormat>
        <label>Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RMD_Withdrawals_Require_RMD_Requirement</fullName>
        <active>false</active>
        <description>When Transaction records are created with the Transaction Type of &quot;RMD Withdrawal&quot;, the RMD Requirement lookup field must be populated so that the transaction is linked to the RMD Requirement record.</description>
        <errorConditionFormula>AND (ISBLANK( RMD_Requirement__c ), TEXT( Transaction_Type__c) = &apos;RMD Withdrawal&apos;)</errorConditionFormula>
        <errorMessage>For Transactions with a Type of &quot;RMD Withdrawal&quot;, the RMD Requirement lookup field must be populated.</errorMessage>
    </validationRules>
</CustomObject>